tests/e2e/not_allowed/const.error
Error: syntax error in story at line 1, column 1

1|    const = 1
      ^^^^^

E0030: `const` is reserved for future use
